# turn-app

./: .env.example  .gitignore  README.md  RESEARCH.md  VISION.md  main.py  nixpacks.toml  pyproject.toml  railway.json
backend/: seed_data.py
backend/app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
backend/app/api/: actions.py  auth.py  sessions.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx
frontend/src/components/: ScoreBars.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: ActionPicker.jsx  Dashboard.jsx  GameSession.jsx  Login.jsx  ManageLibrary.jsx  Signup.jsx
