[project]
name = "spade-app"
version = "0.1.0"
description = "Reflection support game for LLM collaboration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.0.0",
]
